update harvester to use k8s secret for default

--- a/helm/harvester/charts/mariadb/values.yaml
+++ b/helm/harvester/charts/mariadb/values.yaml
@@ -18,8 +18,7 @@ persistentvolume:
 
 # use secret
 secret:
-  enabled: false
-  name: ""
+  name: "harvester-secret"
 
 database:
   # harvester password
