--- a/helm/harvester/values/values-lsst.yaml
+++ b/helm/harvester/values/values-lsst.yaml
@@ -8,23 +8,17 @@ harvester:
     create: false
     selector: false
 
-  secret:
-    enabled: false
-    name: harvester-dev-secret
-
   httpProxy: "http://atlsquid.slac.stanford.edu:3128"
   httpsProxy: "http://atlsquid.slac.stanford.edu:3128"
   noProxy: "localhost,idds-dev-rest,panda-dev-server"
 
   experiment: "lsst"
+  panda:
+    host: "panda-dev-server:443"
   pilotcerts:
     enabled: true
 
 mariadb:
-  secret:
-    enabled: false
-    name: harvester-dev-secret
-
   persistentvolume:
     class: wekafs--sdf-k8s01
     create: false
