--- a/helm/idds/charts/daemon/values.yaml
+++ b/helm/idds/charts/daemon/values.yaml
@@ -25,8 +25,7 @@ hostcerts:
   enabled: false
 
 secret:
-  enabled: false
-  name: ""
+  name: "idds-secret"
 
 database:
   # Set the reference name of the database config
