--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -14,8 +14,8 @@ stringData:
   HARVESTER_DB_HOST: {{ .Values.harvester.database.dbhost }}
   {{- end }}
 
-  PANDA_AUTH_ID_TOKEN: {{ .Values.global.authIdToken }}
-  PANDA_AUTH_VO: {{ .Values.global.authVO }}
+  PANDA_AUTH_ID_TOKEN: {{ .Values.auth.authIdToken }}
+  PANDA_AUTH_VO: {{ .Values.auth.authVO }}
 ---
 # certs
 apiVersion: v1
