--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -9,26 +9,26 @@ stringData:
   PANDA_DB_PASSWORD: {{ .Values.panda.database.password }}
   PANDA_DB_HOST: {{ .Values.panda.database.dbhost }}
 
-  PANDA_AUTH_ID_TOKEN: {{ .Values.global.authIdToken }}
-  PANDA_AUTH_VO: {{ .Values.global.authVO }}
+  PANDA_AUTH_ID_TOKEN: {{ .Values.auth.authIdToken }}
+  PANDA_AUTH_VO: {{ .Values.auth.authVO }}
 
   # ActiveMQ
-  PANDA_ACTIVEMQ_LIST: {{ join "," .Values.global.activemq.serverList }}
-  PANDA_ACTIVEMQ_PASSWD_panda: {{ .Values.global.activemq.basePasswd }}_panda
-  PANDA_ACTIVEMQ_PASSWD_jedi: {{ .Values.global.activemq.basePasswd }}_jedi
+  PANDA_ACTIVEMQ_LIST: {{ join "," .Values.msgsvc.serverList }}
+  PANDA_ACTIVEMQ_PASSWD_panda: {{ .Values.msgsvc.basePasswd }}_panda
+  PANDA_ACTIVEMQ_PASSWD_jedi: {{ .Values.msgsvc.basePasswd }}_jedi
 
   # iDDS
-  PANDA_IDDS_HOST: "{{ .Values.global.idds.restHost }}"
-  PANDA_IDDS_PORT: "{{ .Values.global.idds.restPort }}"
-  PANDA_IDDS_AUTH_ID_TOKEN: "{{ .Values.global.authIdToken }}"
-  PANDA_IDDS_AUTH_VO: "{{ .Values.global.authVO }}"
+  PANDA_IDDS_HOST: "{{ .Values.idds.restHost }}"
+  PANDA_IDDS_PORT: "{{ .Values.idds.restPort }}"
+  PANDA_IDDS_AUTH_ID_TOKEN: "{{ .Values.auth.authIdToken }}"
+  PANDA_IDDS_AUTH_VO: "{{ .Values.auth.authVO }}"
   
   # Rucio
-  PANDA_RUCIO_HOST: "{{ .Values.global.rucio.rucioHost }}"
-  PANDA_RUCIO_AUTH_HOST: "{{ .Values.global.rucio.authHost }}"
-  PANDA_RUCIO_USERNAME: "{{ .Values.global.rucio.username }}"
-  PANDA_RUCIO_PASSWORD: "{{ .Values.global.rucio.password }}"
-  PANDA_RUCIO_ACCOUNT: "{{ .Values.global.rucio.account }}"
+  PANDA_RUCIO_HOST: "{{ .Values.rucio.rucioHost }}"
+  PANDA_RUCIO_AUTH_HOST: "{{ .Values.rucio.authHost }}"
+  PANDA_RUCIO_USERNAME: "{{ .Values.rucio.username }}"
+  PANDA_RUCIO_PASSWORD: "{{ .Values.rucio.password }}"
+  PANDA_RUCIO_ACCOUNT: "{{ .Values.rucio.account }}"
 
 ---
 # certs
@@ -51,9 +51,9 @@ metadata:
   name: {{ .Values.panda.name }}-auth
 type: Opaque
 stringData:
-  {{- range $path, $_ := .Files.Glob "files/panda_auths/**_auth_config.json" }}
-  {{ base $path }}: |-
-    {{ $.Files.Get $path }}
-  {{- end }}
+  {{- range $client := .Values.auth.oidc.clients }}
+  {{ $client.name }}_auth_config.json: |-
+    {{ $.Files.Get "files/panda_auths/auth_config.json.template" | replace "ID" $client.client_id | replace "SECRET" $client.client_secret | replace "URL" $.Values.auth.oidc.config_url | replace "AUDIENCE" $.Values.auth.oidc.audience  | replace "VO" $client.name }}
+  {{ end }}
 
 {{- end }}
