--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -1,50 +1,44 @@
 # secret main file
 
 # global values
-global:
+auth:
   auth: "oidc"
   authIdToken: "FIXME"
-  authVO: "Rubin.production"
-
-  activemq:
-    serverList:
-      - "activemq-dev:61613"
-
-    basePasswd: "FIXME"
-
-  idds:
-    restHost: "idds-rest"
-    restPort: 8443
-
-  rucio:
-    rucioHost: "sprucio01.sdcc.bnl.gov:443"
-    authHost: "sprucio01.sdcc.bnl.gov:443"
-    username: "iddsv1"
-    password: "FIXME"
-    account: "iddsv1"
+  authVO: "panda_dev"
 
   oidc:
-    panda_dev:
-      client_id: FIXME
-      client_secret: FIXME
-    rubin:
-      client_id: FIXME
-      client_secret: FIXME
-    rubin_production:
-      client_id: FIXME
-      client_secret: FIXME
+    audience: "https://pandaserver-doma.cern.ch"
+    config_url: "https://panda-iam-doma.cern.ch/.well-known/openid-configuration"
+    clients:
+      - name: "panda_dev"
+        client_id: "FIXME"
+        client_secret: "FIXME"
+      - name: "Rubin"
+        client_id: "FIXME"
+        client_secret: "FIXME"
+      - name: "Rubin.production"
+        client_id: "FIXME"
+        client_secret: "FIXME"
+
 
 msgsvc:
   enabled: true
   name: "msgsvc-secret"
+
+  serverList:
+    - "activemq-dev:61613"
+
+  basePasswd: "FIXME"
+
 
 panda:
   enabled: true
   name: "panda-secret"
 
   database:
-    password: FIXME
+    password: "FIXME"
     dbhost: "FIXME"
+
 
 harvester:
   enabled: true
@@ -55,9 +49,13 @@ harvester:
     admin_password: FIXME
     dbhost: "FIXME"
 
+
 idds:
   enabled: true
   name: "idds-secret"
+
+  restHost: "idds-rest"
+  restPort: 8443
 
   database:
     name: "idds_db"
@@ -66,13 +64,15 @@ idds:
     schema: "doma_idds"
     host: "idds-dev-postgres"
 
-  activemq:
+  msgsvc:
     detination: /queue/idds_panda
     username: idds
+
 
 bigmon:
   enabled: true
   name: "bigmon-secret"
+
 
 iam:
   enabled: true
@@ -88,3 +88,11 @@ iam:
   cilogon:
     client_id: "FIXME"
     client_secret: "FIXME"
+
+
+rucio:
+  rucioHost: "sprucio01.sdcc.bnl.gov:443"
+  authHost: "sprucio01.sdcc.bnl.gov:443"
+  username: "iddsv1"
+  password: "FIXME"
+  account: "iddsv1"
