--- a/secrets/templates/idds.yaml
+++ b/secrets/templates/idds.yaml
@@ -17,9 +17,9 @@ metadata:
   name: {{ .Values.idds.name }}-envs
 type: Opaque
 stringData:
-  PANDA_AUTH_ID_TOKEN: "{{ .Values.global.authIdToken }}"
-  PANDA_AUTH_VO: "{{ .Values.global.authVO }}"
-  PANDA_AUTH: "{{ .Values.global.auth }}"
+  PANDA_AUTH_ID_TOKEN: "{{ .Values.auth.authIdToken }}"
+  PANDA_AUTH_VO: "{{ .Values.auth.authVO }}"
+  PANDA_AUTH: "{{ .Values.auth.auth }}"
 
   IDDS_DATABASE_NAME: "{{ .Values.idds.database.name}}"
   IDDS_DATABASE_USER: "{{ .Values.idds.database.user}}"
@@ -27,19 +27,24 @@ stringData:
   IDDS_DATABASE_SCHEMA: "{{ .Values.idds.database.schema}}"
   IDDS_DATABASE_HOST: "{{ .Values.idds.database.host}}"
 
-  IDDS_CONDUCTOR_BROKERS: "{{ join "," .Values.global.activemq.serverList }}"
-  IDDS_CONDUCTOR_PORT: "{{default "61613" .Values.global.activemq.port }}"
-  IDDS_CONDUCTOR_DESTINATION: "{{.Values.idds.activemq.destination}}"
-  IDDS_CONDUCTOR_USERNAME: "{{.Values.idds.activemq.username}}"
-  IDDS_CONDUCTOR_PASSWORD: "{{.Values.global.activemq.basePasswd}}_{{.Values.idds.activemq.username}}"
+  IDDS_CONDUCTOR_BROKERS: "{{ join "," .Values.msgsvc.serverList }}"
+  IDDS_CONDUCTOR_PORT: "{{default "61613" .Values.msgsvc.port }}"
+  IDDS_CONDUCTOR_DESTINATION: "{{.Values.idds.msgsvc.destination}}"
+  IDDS_CONDUCTOR_USERNAME: "{{.Values.idds.msgsvc.username}}"
+  IDDS_CONDUCTOR_PASSWORD: "{{.Values.msgsvc.basePasswd}}_{{.Values.idds.msgsvc.username}}"
 
-  IDDS_OIDC_RUBIN_CLIENT_ID: "{{.Values.global.oidc.rubin.client_id}}"
-  IDDS_OIDC_RUBIN_CLIENT_SECRET: "{{.Values.global.oidc.rubin.client_secret}}"
-  IDDS_OIDC_RUBIN_PRODUCTION_CLIENT_ID: "{{.Values.global.oidc.rubin_production.client_id}}"
-  IDDS_OIDC_RUBIN_PRODUCTION_CLIENT_SECRET: "{{.Values.global.oidc.rubin_production.client_secret}}"
-  IDDS_OIDC_PANDA_DEV_CLIENT_ID: "{{.Values.global.oidc.panda_dev.client_id}}"
-  IDDS_OIDC_PANDA_DEV_CLIENT_SECRET: "{{.Values.global.oidc.panda_dev.client_secret}}"
-
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Values.idds.name }}-auth
+type: Opaque
+stringData:
+  "auth.cfg": |-
+     {"common":
+         {"allow_vos": ""
+         }
+     }
 ---
 apiVersion: v1
 kind: Secret
