--- a/secrets/templates/msgsvc.yaml
+++ b/secrets/templates/msgsvc.yaml
@@ -6,6 +6,6 @@ metadata:
   name: {{ .Values.msgsvc.name }}-envs
 type: Opaque
 stringData:
-  ACTIVEMQ_BASE_PASSWD: {{ .Values.global.activemq.basePasswd }}
+  ACTIVEMQ_BASE_PASSWD: {{ .Values.msgsvc.basePasswd }}
 
 {{- end }}
