--- a/helm/bigmon/charts/main/templates/configmap.yaml
+++ b/helm/bigmon/charts/main/templates/configmap.yaml
@@ -57,11 +57,17 @@ data:
   SOCIAL_AUTH_INDIGOIAMOIDC_SECRET: "{{ .Values.auth.indigoiam.secret }}"
   SOCIAL_AUTH_INDIGOIAMOIDC_BASEPATH: "{{ .Values.auth.indigoiam.basePath }}"
   # PandaDB
-  PANDA_DB_NAME: "{{ .Values.database.databaseName }}"
-  PANDA_DB_HOST: "{{ .Values.database.hostName }}"
-  PANDA_DB_PORT: "{{ .Values.database.port }}"
-  PANDA_DB_USER: "{{ .Values.database.userName }}"
-  PANDA_DB_PASSWORD: "{{ .Values.database.password }}"
+  PANDA_DB_NAME: "{{ .Values.pandadatabase.databaseName }}"
+  PANDA_DB_HOST: "{{ .Values.pandadatabase.hostName }}"
+  PANDA_DB_PORT: "{{ .Values.pandadatabase.port }}"
+  PANDA_DB_USER: "{{ .Values.pandadatabase.userName }}"
+  PANDA_DB_PASSWORD: "{{ .Values.pandadatabase.password }}"
+  # iDDSDB
+  IDDS_DB_NAME: "{{ .Values.iddsdatabase.databaseName }}"
+  IDDS_DB_HOST: "{{ .Values.iddsdatabase.hostName }}"
+  IDDS_DB_PORT: "{{ .Values.iddsdatabase.port }}"
+  IDDS_DB_USER: "{{ .Values.iddsdatabase.userName }}"
+  IDDS_DB_PASSWORD: "{{ .Values.database.password }}"
   # Rucio
   RUCIO_SERVER_HOST: "{{ .Values.rucio.rucioHost }}"
   RUCIO_AUTH_HOST: "{{ .Values.rucio.authHost }}"
