--- a/helm/harvester/charts/mariadb/templates/deployment.yaml
+++ b/helm/harvester/charts/mariadb/templates/deployment.yaml
@@ -77,7 +77,7 @@ spec:
               protocol: TCP
           envFrom:
             - secretRef:
-                name: {{ .Values.secret.name }}-envs
+                name: {{ .Values.global.secret }}-harvester-envs
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
