--- a/helm/msgsvc/values.yaml
+++ b/helm/msgsvc/values.yaml
@@ -2,6 +2,9 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+global:
+  secret: "panda-secrets"
+
 activemq:
   # enable 
   enabled: true
