--- a/helm/iam/values.yaml
+++ b/helm/iam/values.yaml
@@ -2,6 +2,8 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+global:
+  secret: "panda-secrets"
 
 main:
   enabled: true
