update idds based on k8s secrets

--- a/helm/idds/charts/daemon/templates/deployment.yaml
+++ b/helm/idds/charts/daemon/templates/deployment.yaml
@@ -89,7 +89,7 @@ spec:
             - configMapRef:
                 name: {{ .Release.Name }}-rest-envs
             - secretRef:
-                name: {{ .Values.secret.name }}-envs
+                name: {{ .Values.global.secret }}-idds-envs
           volumeMounts:
               - name: {{ include "daemon.fullname" . }}-logs
                 mountPath: /var/log/idds/
@@ -119,7 +119,7 @@ spec:
               - configMap:
                   name: {{ .Release.Name }}-rest-configmap
               - secret:
-                  name: {{ .Values.secret.name }}-auth
+                  name: {{ .Values.global.secret }}-idds-auth
         - name: {{ include "daemon.fullname" . }}-certs
           secret:
-              secretName: {{ .Values.secret.name }}-certs
+              secretName: {{ .Values.global.secret }}-idds-certs
