--- a/helm/idds/charts/postgres/templates/deployment.yaml
+++ b/helm/idds/charts/postgres/templates/deployment.yaml
@@ -79,7 +79,7 @@ spec:
             - configMapRef:
                 name: {{ include "postgres.fullname" . }}-configmap
             - secretRef:
-                name: {{ .Values.secret.name }}-db-envs
+                name: {{ .Values.global.secret }}-idds-db-envs
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
