--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -3,20 +3,32 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.harvester.name }}-envs
+  name: {{ include "secrets.fullname" . }}-harvester-envs
 type: Opaque
 stringData:
   MARIADB_DATABASE: "harvester"
   MARIADB_USER: "harvester"
   MARIADB_PASSWORD: {{ .Values.harvester.database.password }}
   MARIADB_ROOT_PASSWORD: {{ .Values.harvester.database.admin_password }}
+  {{- if .Values.harvester.database.dbhost }}
   HARVESTER_DB_HOST: {{ .Values.harvester.database.dbhost }}
+  {{- else }}
+  HARVESTER_DB_HOST: "{{ include "add_affix" (list .Values.affix "harvester") }}-mariadb"
+  {{- end }}
 
   PANDA_AUTH_ID_TOKEN: {{ .Values.auth.authIdToken }}
   PANDA_AUTH_VO: {{ .Values.auth.authVO }}
   PANDA_BEHIND_REAL_LB: "1"
+  {{- if .Values.panda.url }}
   PANDA_URL: "{{ .Values.panda.url}}"
-  PANDA_URL_SSL: "{{ .Values.panda.urlSSL}}"
+  {{- else }}
+  PANDA_URL: "http://{{ include "add_affix" (list .Values.affix "panda") }}-server:{{ .Values.panda.port }}/server/panda"
+  {{- end }}
+  {{- if .Values.panda.urlSSL }}
+  PANDA_URL_SSL: "{{ .Values.panda.urlSSL }}"
+  {{- else }}
+  PANDA_URL_SSL: "https://{{ include "add_affix" (list .Values.affix "panda") }}-server:{{ .Values.panda.sslPort }}/server/panda"
+  {{- end }}
 
   {{- if .Values.harvester.experiment }}
   EXPERIMENT: {{ .Values.harvester.experiment }}
@@ -32,7 +44,7 @@ stringData:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.harvester.name }}-certs
+  name: {{ include "secrets.fullname" . }}-harvester-certs
 type: Opaque
 stringData:
   {{- range $path, $_ := .Files.Glob "files/harvester_certs/**.pem" }}
