--- a/secrets/templates/idds.yaml
+++ b/secrets/templates/idds.yaml
@@ -9,7 +9,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.idds.name }}-db-envs
+  name: {{ include "secrets.fullname" . }}-idds-db-envs
 type: Opaque
 stringData:
   POSTGRES_DB: "{{ .Values.idds.database.name }}"
@@ -20,7 +20,7 @@ stringData:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.idds.name }}-envs
+  name: {{ include "secrets.fullname" . }}-idds-envs
 type: Opaque
 stringData:
   PANDA_AUTH_ID_TOKEN: "{{ .Values.auth.authIdToken }}"
@@ -28,10 +28,26 @@ stringData:
   PANDA_AUTH: "{{ .Values.auth.auth }}"
 
   PANDA_BEHIND_REAL_LB: "1"
-  PANDA_MONITOR_URL: "{{ .Values.panda.monitorURL}}"
+  {{- if .Values.panda.url }}
   PANDA_URL: "{{ .Values.panda.url}}"
-  PANDA_URL_SSL: "{{ .Values.panda.urlSSL}}"
+  {{- else }}
+  PANDA_URL: "http://{{ include "add_affix" (list .Values.affix "panda") }}-server:{{ .Values.panda.port }}/server/panda"
+  {{- end }}
+  {{- if .Values.panda.urlSSL }}
+  PANDA_URL_SSL: "{{ .Values.panda.urlSSL }}"
+  {{- else }}
+  PANDA_URL_SSL: "https://{{ include "add_affix" (list .Values.affix "panda") }}-server:{{ .Values.panda.sslPort }}/server/panda"
+  {{- end }}
+  {{- if .Values.panda.monitorURL }}
+  PANDA_MONITOR_URL: "{{ .Values.panda.monitorURL}}"
+  {{- else }}
+  PANDA_MONITOR_URL: "https://{{ include "add_affix" (list .Values.affix "panda") }}-server"
+  {{- end }}
+  {{- if .Values.panda.cacheURL }}
   PANDACACHE_URL: "{{ .Values.panda.cacheURL}}"
+  {{- else }}
+  PANDACACHE_URL: "https://{{ include "add_affix" (list .Values.affix "panda") }}-server:{{ .Values.panda.sslPort }}/server/panda"
+  {{- end }}
   PANDA_VERIFY_HOST: "{{ .Values.panda.verifyHost}}"
   PANDA_CONFIG_ROOT: "{{ .Values.panda.configRoot}}"
 
@@ -39,40 +55,54 @@ stringData:
   IDDS_DATABASE_USER: "{{ .Values.idds.database.user}}"
   IDDS_DATABASE_PASSWORD: "{{ .Values.idds.database.password}}"
   IDDS_DATABASE_SCHEMA: "{{ .Values.idds.database.schema}}"
+  {{- if .Values.idds.database.host }}
   IDDS_DATABASE_HOST: "{{ .Values.idds.database.host}}"
+  {{- else }}
+  IDDS_DATABASE_HOST: "{{ include "add_affix" (list .Values.affix "idds") }}-postgres"
+  {{- end }}
 
-  IDDS_CONDUCTOR_BROKERS: "{{ join "," .Values.msgsvc.serverList }}"
+  {{- if .Values.msgsvc.serverList }}
+  IDDS_CONDUCTOR_BROKERS: {{ join "," .Values.msgsvc.serverList }}
+  {{- else }}
+  IDDS_CONDUCTOR_BROKERS: "{{ include "add_affix" (list .Values.affix "msgsvc") }}-activemq:61613"
+  {{- end }}
   IDDS_CONDUCTOR_PORT: "{{default "61613" .Values.msgsvc.port }}"
   IDDS_CONDUCTOR_DESTINATION: "/queue/idds_panda"
   IDDS_CONDUCTOR_USERNAME: "idds"
   IDDS_CONDUCTOR_PASSWORD: "{{.Values.msgsvc.basePasswd}}_idds"
 
+  {{- if .Values.idds.restHost }}
   IDDS_SERVER: "{{ .Values.idds.restHost }}:{{ .Values.idds.restPort  }}"
+  {{- else }}
+  IDDS_SERVER: "{{ include "add_affix" (list .Values.affix "idds") }}-rest:{{ .Values.idds.restPort  }}"
+  {{- end }}
 
 
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.idds.name }}-auth
+  name: {{ include "secrets.fullname" . }}-idds-auth
 type: Opaque
 stringData:
-  "auth.cfg": |-
-     {"common":
-         {"allow_vos": {{ join "," $client_vos | quote}}
-         },
-      {{- range $client := .Values.auth.oidc.clients }}
-      {{$client.name | quote }}{{":"}}
-        {{- $.Files.Get "files/panda_auths/auth_config.json.template" | replace "ID" $client.client_id | replace "SECRET" $client.client_secret | replace "URL" $.Values.auth.oidc.config_url | replace "AUDIENCE" $.Values.auth.oidc.audience  | replace "VO" $client.name }}
-        {{ "," }}
-      {{- end }}
-      "test_vo": {"a": "b"}
-     }
+  "auth.cfg.json": |-
+      {"/opt/idds/config/idds/auth.cfg":
+          {"common":
+              {"allow_vos": {{ join "," $client_vos | quote}}
+              },
+          {{- range $client := .Values.auth.oidc.clients }}
+          {{$client.name | quote }}{{":"}}
+            {{- $.Files.Get "files/panda_auths/auth_config.json.template" | replace "ID" $client.client_id | replace "SECRET" $client.client_secret | replace "URL" $.Values.auth.oidc.config_url | replace "AUDIENCE" $.Values.auth.oidc.audience  | replace "VO" $client.name }}
+            {{ "," }}
+          {{- end }}
+          "test_vo": {"a": "b"}
+          }
+      }
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.idds.name }}-certs
+  name: {{ include "secrets.fullname" . }}-idds-certs
 type: Opaque
 stringData:
   {{- range $path, $_ := .Files.Glob "files/idds_certs/**.pem" }}
