--- a/secrets/templates/msgsvc.yaml
+++ b/secrets/templates/msgsvc.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.msgsvc.name }}-envs
+  name: {{ include "secrets.fullname" . }}-msgsvc-envs
 type: Opaque
 stringData:
   ACTIVEMQ_BASE_PASSWD: {{ .Values.msgsvc.basePasswd }}
