--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -3,28 +3,50 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.panda.name }}-envs
+  name: {{ include "secrets.fullname" . }}-panda-envs
 type: Opaque
 stringData:
   PANDA_DB_PASSWORD: {{ .Values.panda.database.password }}
+  {{- if .Values.panda.database.dbhost }}
   PANDA_DB_HOST: {{ .Values.panda.database.dbhost }}
+  {{- else }}
+  PANDA_DB_HOST: "{{ include "add_affix" (list .Values.affix "panda") }}-postgres"
+  {{- end }}
 
+  {{- if .Values.panda.url }}
   PANDA_URL: "{{ .Values.panda.url}}"
-  PANDA_URL_SSL: "{{ .Values.panda.urlSSL}}"
+  {{- else }}
+  PANDA_URL: "http://{{ include "add_affix" (list .Values.affix "panda") }}-server:{{ .Values.panda.port }}/server/panda"
+  {{- end }}
+  {{- if .Values.panda.urlSSL }}
+  PANDA_URL_SSL: "{{ .Values.panda.urlSSL }}"
+  {{- else }}
+  PANDA_URL_SSL: "https://{{ include "add_affix" (list .Values.affix "panda") }}-server:{{ .Values.panda.sslPort }}/server/panda"
+  {{- end }}
   PANDA_VERIFY_HOST: "off"
   PANDA_AUTH: "oidc"
   PANDA_AUTH_ID_TOKEN: {{ .Values.auth.authIdToken }}
   PANDA_AUTH_VO: {{ .Values.auth.authVO }}
 
+  {{- if .Values.panda.hostName }}
   PANDA_SANDBOX_HOST: "{{ .Values.panda.hostName }}"
+  {{- end}}
 
   # ActiveMQ
+  {{- if .Values.msgsvc.serverList }}
   PANDA_ACTIVEMQ_LIST: {{ join "," .Values.msgsvc.serverList }}
+  {{- else }}
+  PANDA_ACTIVEMQ_LIST: "{{ include "add_affix" (list .Values.affix "msgsvc") }}-activemq:61613"
+  {{- end }}
   PANDA_ACTIVEMQ_PASSWD_panda: {{ .Values.msgsvc.basePasswd }}_panda
   PANDA_ACTIVEMQ_PASSWD_jedi: {{ .Values.msgsvc.basePasswd }}_jedi
 
   # iDDS
+  {{- if .Values.idds.restHost }}
   PANDA_IDDS_HOST: "{{ .Values.idds.restHost }}"
+  {{- else }}
+  PANDA_IDDS_HOST: "{{ include "add_affix" (list .Values.affix "idds") }}-rest"
+  {{- end }}
   PANDA_IDDS_PORT: "{{ .Values.idds.restPort }}"
   PANDA_IDDS_AUTH_ID_TOKEN: "{{ .Values.auth.authIdToken }}"
   PANDA_IDDS_AUTH_VO: "{{ .Values.auth.authVO }}"
@@ -41,7 +63,7 @@ stringData:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.panda.name }}-certs
+  name: {{ include "secrets.fullname" . }}-panda-certs
 type: Opaque
 stringData:
   {{- range $path, $_ := .Files.Glob "files/panda_certs/**.pem" }}
@@ -54,7 +76,7 @@ stringData:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.panda.name }}-auth
+  name: {{ include "secrets.fullname" . }}-panda-auth
 type: Opaque
 stringData:
   {{- range $client := .Values.auth.oidc.clients }}
