--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -1,6 +1,8 @@
 # secret main file
 
-# global values
+# will use affix to automatically fill some hosts.
+affix: "FIXME"
+
 auth:
   auth: "oidc"
   authIdToken: "FIXME"
@@ -23,10 +25,10 @@ auth:
 
 msgsvc:
   enabled: true
-  name: "msgsvc-secret"
 
-  serverList:
-    - "activemq-dev:61613"
+  # if it's empty, affix will be used to create a default server.
+  serverList: []
+  #  - "activemq-dev:61613"
 
   basePasswd: "FIXME"
 
@@ -49,24 +51,26 @@ msgsvc:
 
 panda:
   enabled: true
-  name: "panda-secret"
 
   database:
     password: "FIXME"
-    dbhost: "FIXME"
+    # affix will be used to create a default dbhost if it's empty
+    dbhost: ""
 
-  hostName: "FIXME"
+  hostName: ""
 
-  url: "https://panda-dev-server:80/server/panda"
-  urlSSL: "https://panda-dev-server:443/server/panda"
-  monitorURL: "https://panda-dev-server"
-  cacheURL: "https://panda-dev-server:443/server/panda"
+  port: "80"
+  sslPort: "443"
+  # affix will be used to create default urls if it's empty.
+  url: ""
+  urlSSL: ""
+  monitorURL: ""
+  cacheURL: ""
   verifyHost: "off"
   configRoot: "/tmp/"
 
 harvester:
   enabled: true
-  name: "harvester-secret"
   experiment: ""
 
   # harvester id
@@ -75,14 +79,16 @@ harvester:
   database:
     password: FIXME
     admin_password: FIXME
-    dbhost: "FIXME"
+    # affix will be used to fill dbhost if it's empty
+    dbhost: ""
 
 
 idds:
   enabled: true
-  name: "idds-secret"
 
-  restHost: "idds-rest"
+  # affix will used to create a default restHost if it's empty
+  # restHost: "idds-dev-rest"
+  restHost: ""
   restPort: 8443
 
   database:
@@ -90,20 +96,22 @@ idds:
     user: "idds"
     password: "MyPass123"
     schema: "doma_idds"
-    host: "idds-dev-postgres"
+    # affix will be used to fill host if it's empty
+    # host: "idds-dev-postgres"
+    host: ""
 
 
 bigmon:
   enabled: true
-  name: "bigmon-secret"
 
 
 iam:
   enabled: true
-  name: "iam-secret"
 
   database:
-    host: "iam-mariadb"
+    # affix will be used to fill host if it's empty.
+    # host: "iam-dev-mariadb"
+    host: ""
     name: "iam_db"
     user: "iam"
     password: "MyPass0508"
