--- a/secrets/templates/iam.yaml
+++ b/secrets/templates/iam.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.iam.name }}-db-envs
+  name: {{ include "secrets.fullname" . }}-iam-db-envs
 type: Opaque
 stringData:
   MARIADB_USER: {{ .Values.iam.database.user }}
@@ -15,13 +15,17 @@ stringData:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.iam.name }}-iam-envs
+  name: {{ include "secrets.fullname" . }}-iam-envs
 type: Opaque
 stringData:
   # IAM_JAVA_OPTS: "-Dspring.profiles.active={{ .Values.iam.profiles }} -Dspring.data.rest.basePath=/iam -Dserver.servlet.context-path=/iam -Dlog4j2.formatMsgNoLookups=true"
   IAM_JAVA_OPTS: "-Dspring.profiles.active={{ .Values.iam.profiles }} -Dlog4j2.formatMsgNoLookups=true"
 
+  {{- if .Values.iam.database.host }}
   IAM_DB_HOST: {{.Values.iam.database.host}}
+  {{- else }}
+  IAM_DB_HOST: "{{ include "add_affix" (list .Values.affix "iam") }}-mariadb"
+  {{- end }}
   IAM_DB_NAME: {{.Values.iam.database.name}}
   IAM_DB_USERNAME: {{.Values.iam.database.user}}
   IAM_DB_PASSWORD: {{.Values.iam.database.password}}
@@ -58,7 +62,7 @@ stringData:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.iam.name }}-initdb
+  name: {{ include "secrets.fullname" . }}-iam-initdb
 type: Opaque
 stringData:
   init_org_db.sql: |-
@@ -70,7 +74,7 @@ stringData:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.iam.name }}-conf
+  name: {{ include "secrets.fullname" . }}-iam-conf
 type: Opaque
 stringData:
   {{- range $path, $_ := .Files.Glob "files/iam_conf/*" }}
