--- a/secrets/templates/idds.yaml
+++ b/secrets/templates/idds.yaml
@@ -28,26 +28,10 @@ stringData:
   PANDA_AUTH: "{{ .Values.auth.auth }}"
 
   PANDA_BEHIND_REAL_LB: "1"
-  {{- if .Values.panda.url }}
-  PANDA_URL: "{{ .Values.panda.url}}"
-  {{- else }}
-  PANDA_URL: "http://{{ include "add_affix" (list .Values.affix "panda") }}-server:{{ .Values.panda.port }}/server/panda"
-  {{- end }}
-  {{- if .Values.panda.urlSSL }}
-  PANDA_URL_SSL: "{{ .Values.panda.urlSSL }}"
-  {{- else }}
-  PANDA_URL_SSL: "https://{{ include "add_affix" (list .Values.affix "panda") }}-server:{{ .Values.panda.sslPort }}/server/panda"
-  {{- end }}
-  {{- if .Values.panda.monitorURL }}
-  PANDA_MONITOR_URL: "{{ .Values.panda.monitorURL}}"
-  {{- else }}
-  PANDA_MONITOR_URL: "https://{{ include "add_affix" (list .Values.affix "panda") }}-server"
-  {{- end }}
-  {{- if .Values.panda.cacheURL }}
-  PANDACACHE_URL: "{{ .Values.panda.cacheURL}}"
-  {{- else }}
-  PANDACACHE_URL: "https://{{ include "add_affix" (list .Values.affix "panda") }}-server:{{ .Values.panda.sslPort }}/server/panda"
-  {{- end }}
+  PANDA_MONITOR_URL: "https://{{ include "bigmon_ref" . }}-main"
+  PANDA_URL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/server/panda"
+  PANDA_URL_SSL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.sslPort }}/server/panda"
+  PANDACACHE_URL: "https://{{ .Values.panda.hostName }}:{{ .Values.panda.sslPort }}/server/panda"
   PANDA_VERIFY_HOST: "{{ .Values.panda.verifyHost}}"
   PANDA_CONFIG_ROOT: "{{ .Values.panda.configRoot}}"
 
@@ -55,27 +39,16 @@ stringData:
   IDDS_DATABASE_USER: "{{ .Values.idds.database.user}}"
   IDDS_DATABASE_PASSWORD: "{{ .Values.idds.database.password}}"
   IDDS_DATABASE_SCHEMA: "{{ .Values.idds.database.schema}}"
-  {{- if .Values.idds.database.host }}
-  IDDS_DATABASE_HOST: "{{ .Values.idds.database.host}}"
-  {{- else }}
-  IDDS_DATABASE_HOST: "{{ include "add_affix" (list .Values.affix "idds") }}-postgres"
-  {{- end }}
 
-  {{- if .Values.msgsvc.serverList }}
-  IDDS_CONDUCTOR_BROKERS: {{ join "," .Values.msgsvc.serverList }}
-  {{- else }}
-  IDDS_CONDUCTOR_BROKERS: "{{ include "add_affix" (list .Values.affix "msgsvc") }}-activemq:61613"
-  {{- end }}
-  IDDS_CONDUCTOR_PORT: "{{default "61613" .Values.msgsvc.port }}"
+  IDDS_DATABASE_HOST: "{{ .Values.idds.database.host | default (printf "%s-postgres" (include "idds_ref" .)) }}"
+
+  IDDS_CONDUCTOR_BROKERS: "{{ include "msgsvc_ref" . }}-activemq:61613"
+  IDDS_CONDUCTOR_PORT: 61613
   IDDS_CONDUCTOR_DESTINATION: "/queue/idds_panda"
   IDDS_CONDUCTOR_USERNAME: "idds"
   IDDS_CONDUCTOR_PASSWORD: "{{.Values.msgsvc.basePasswd}}_idds"
 
-  {{- if .Values.idds.restHost }}
-  IDDS_SERVER: "{{ .Values.idds.restHost }}:{{ .Values.idds.restPort  }}"
-  {{- else }}
-  IDDS_SERVER: "{{ include "add_affix" (list .Values.affix "idds") }}-rest:{{ .Values.idds.restPort  }}"
-  {{- end }}
+  IDDS_SERVER: "https://{{ include "idds_ref" . }}:{{ .Values.idds.restPort  }}"
 
 
 ---
