--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -7,22 +7,10 @@ metadata:
 type: Opaque
 stringData:
   PANDA_DB_PASSWORD: {{ .Values.panda.database.password }}
-  {{- if .Values.panda.database.dbhost }}
-  PANDA_DB_HOST: {{ .Values.panda.database.dbhost }}
-  {{- else }}
-  PANDA_DB_HOST: "{{ include "add_affix" (list .Values.affix "panda") }}-postgres"
-  {{- end }}
+  PANDA_DB_HOST: "{{ .Values.panda.database.dbhost | default (printf "%s-postgres" (include "panda_ref" .)) }}"
 
-  {{- if .Values.panda.url }}
-  PANDA_URL: "{{ .Values.panda.url}}"
-  {{- else }}
-  PANDA_URL: "http://{{ include "add_affix" (list .Values.affix "panda") }}-server:{{ .Values.panda.port }}/server/panda"
-  {{- end }}
-  {{- if .Values.panda.urlSSL }}
-  PANDA_URL_SSL: "{{ .Values.panda.urlSSL }}"
-  {{- else }}
-  PANDA_URL_SSL: "https://{{ include "add_affix" (list .Values.affix "panda") }}-server:{{ .Values.panda.sslPort }}/server/panda"
-  {{- end }}
+  PANDA_URL: "https://{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/server/panda"
+  PANDA_URL_SSL: "https://{ include "panda_ref" . }}-server:{{ .Values.panda.sslPort }}/server/panda"
   PANDA_VERIFY_HOST: "off"
   PANDA_AUTH: "oidc"
   PANDA_AUTH_ID_TOKEN: {{ .Values.auth.authIdToken }}
@@ -33,20 +21,12 @@ stringData:
   {{- end}}
 
   # ActiveMQ
-  {{- if .Values.msgsvc.serverList }}
-  PANDA_ACTIVEMQ_LIST: {{ join "," .Values.msgsvc.serverList }}
-  {{- else }}
-  PANDA_ACTIVEMQ_LIST: "{{ include "add_affix" (list .Values.affix "msgsvc") }}-activemq:61613"
-  {{- end }}
+  PANDA_ACTIVEMQ_LIST: "{{ include "msgsvc_ref" . }}-activemq:61613"
   PANDA_ACTIVEMQ_PASSWD_panda: {{ .Values.msgsvc.basePasswd }}_panda
   PANDA_ACTIVEMQ_PASSWD_jedi: {{ .Values.msgsvc.basePasswd }}_jedi
 
   # iDDS
-  {{- if .Values.idds.restHost }}
-  PANDA_IDDS_HOST: "{{ .Values.idds.restHost }}"
-  {{- else }}
-  PANDA_IDDS_HOST: "{{ include "add_affix" (list .Values.affix "idds") }}-rest"
-  {{- end }}
+  PANDA_IDDS_HOST: "{{ include "idds_ref" }}-rest"
   PANDA_IDDS_PORT: "{{ .Values.idds.restPort }}"
   PANDA_IDDS_AUTH_ID_TOKEN: "{{ .Values.auth.authIdToken }}"
   PANDA_IDDS_AUTH_VO: "{{ .Values.auth.authVO }}"
