--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -1,7 +1,9 @@
 # secret main file
 
-# will use affix to automatically fill some hosts.
-affix: "FIXME"
+# global values
+
+# affix of instance reference names blah- or -blah
+affix: "-FIXME"
 
 auth:
   auth: "oidc"
@@ -25,10 +27,6 @@ auth:
 
 msgsvc:
   enabled: true
-
-  # if it's empty, affix will be used to create a default server.
-  serverList: []
-  #  - "activemq-dev:61613"
 
   basePasswd: "FIXME"
 
@@ -54,18 +52,16 @@ panda:
 
   database:
     password: "FIXME"
-    # affix will be used to create a default dbhost if it's empty
+    # set only when  using an external database
     dbhost: ""
 
-  hostName: ""
-
+  # PanDA server ports
   port: "80"
   sslPort: "443"
-  # affix will be used to create default urls if it's empty.
-  url: ""
-  urlSSL: ""
-  monitorURL: ""
-  cacheURL: ""
+
+  # host name of the PanDA server for external access
+  hostName: "FIXME"
+
   verifyHost: "off"
   configRoot: "/tmp/"
 
@@ -78,17 +74,16 @@ harvester:
 
   database:
     password: FIXME
-    admin_password: FIXME
-    # affix will be used to fill dbhost if it's empty
+    # set only when using an external database
     dbhost: ""
+
+  # use stable condor instead of latest
+  useStableCondor: false
 
 
 idds:
   enabled: true
 
-  # affix will used to create a default restHost if it's empty
-  # restHost: "idds-dev-rest"
-  restHost: ""
   restPort: 8443
 
   database:
@@ -96,8 +91,7 @@ idds:
     user: "idds"
     password: "MyPass123"
     schema: "doma_idds"
-    # affix will be used to fill host if it's empty
-    # host: "idds-dev-postgres"
+    # set only when using an external database
     host: ""
 
 
