--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -8,27 +8,15 @@ type: Opaque
 stringData:
   MARIADB_DATABASE: "harvester"
   MARIADB_USER: "harvester"
-  MARIADB_PASSWORD: {{ .Values.harvester.database.password }}
-  MARIADB_ROOT_PASSWORD: {{ .Values.harvester.database.admin_password }}
-  {{- if .Values.harvester.database.dbhost }}
-  HARVESTER_DB_HOST: {{ .Values.harvester.database.dbhost }}
-  {{- else }}
-  HARVESTER_DB_HOST: "{{ include "add_affix" (list .Values.affix "harvester") }}-mariadb"
-  {{- end }}
+  MARIADB_PASSWORD: "{{ .Values.harvester.database.password }}"
+  MARIADB_ROOT_PASSWORD: "{{ .Values.harvester.database.password }}-admin"
+  HARVESTER_DB_HOST: "{{ .Values.harvester.database.dbhost | default (printf "%s-mariadb" (include "harvester_ref" .)) }}"
 
   PANDA_AUTH_ID_TOKEN: {{ .Values.auth.authIdToken }}
   PANDA_AUTH_VO: {{ .Values.auth.authVO }}
   PANDA_BEHIND_REAL_LB: "1"
-  {{- if .Values.panda.url }}
-  PANDA_URL: "{{ .Values.panda.url}}"
-  {{- else }}
-  PANDA_URL: "http://{{ include "add_affix" (list .Values.affix "panda") }}-server:{{ .Values.panda.port }}/server/panda"
-  {{- end }}
-  {{- if .Values.panda.urlSSL }}
-  PANDA_URL_SSL: "{{ .Values.panda.urlSSL }}"
-  {{- else }}
-  PANDA_URL_SSL: "https://{{ include "add_affix" (list .Values.affix "panda") }}-server:{{ .Values.panda.sslPort }}/server/panda"
-  {{- end }}
+  PANDA_URL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/server/panda"
+  PANDA_URL_SSL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.sslPort }}/server/panda"
 
   {{- if .Values.harvester.experiment }}
   EXPERIMENT: {{ .Values.harvester.experiment }}
