--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -26,7 +26,7 @@ stringData:
   PANDA_ACTIVEMQ_PASSWD_jedi: {{ .Values.msgsvc.basePasswd }}_jedi
 
   # iDDS
-  PANDA_IDDS_HOST: "{{ include "idds_ref" }}-rest"
+  PANDA_IDDS_HOST: "{{ include "idds_ref" . }}-rest"
   PANDA_IDDS_PORT: "{{ .Values.idds.restPort }}"
   PANDA_IDDS_AUTH_ID_TOKEN: "{{ .Values.auth.authIdToken }}"
   PANDA_IDDS_AUTH_VO: "{{ .Values.auth.authVO }}"
