--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -9,8 +9,8 @@ stringData:
   PANDA_DB_PASSWORD: {{ .Values.panda.database.password }}
   PANDA_DB_HOST: "{{ .Values.panda.database.dbhost | default (printf "%s-postgres" (include "panda_ref" .)) }}"
 
-  PANDA_URL: "https://{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/server/panda"
-  PANDA_URL_SSL: "https://{ include "panda_ref" . }}-server:{{ .Values.panda.sslPort }}/server/panda"
+  PANDA_URL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/server/panda"
+  PANDA_URL_SSL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.sslPort }}/server/panda"
   PANDA_VERIFY_HOST: "off"
   PANDA_AUTH: "oidc"
   PANDA_AUTH_ID_TOKEN: {{ .Values.auth.authIdToken }}
